public/stylesheets/board-style.css
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,200,300,400);

body {
  font-family: 'Source Sans Pro', sans-serif;
  background-color: #41A9BD;
  color: white;
  padding-top: 50px;
  font-size: medium;
}

a {
  color: inherit;
}

.row-centered {
    text-align:center;
    margin-bottom: 50px;
}
.col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:center;
}

#repo-search-box {
  width: 300px;
}

#repo-search-button {
  background-color: #eb0752;
}

#pusher-logo {
  text-align: center;
}

.repo-result-panel {
  background-color: transparent;
  border-color:white;
  margin-top: 20px
}

#repo-results {
  max-height: 300px;
  overflow: scroll;
}

.board-columns {
  width: 20%;
  float: left;
  height: 100%;
  text-align: center;
  padding-left:3px;
  padding-right:3px;
}

.issue-list-group {
  color: black;
  min-height: 70px;
}

.issue-list-item {
  margin: 10px;
  border-radius: 5px;
  font-size: 12px;
  text-align: left;
  overflow: hidden;
}

.board-panel-body {
  padding: 0px;
  background-color: #E2E4E6;
}

.issue-text {
  height: 100%;
  padding-left: 0px;
}

.issue-assignee {
  height: 100%;
  padding-right: 0px;
}

.board-panel-heading {
  border-color: #E2E4E6;
  background-color: #E2E4E6;
  text-align: left;
  font-weight: bold;
  padding: 0px;
}

.panel-default > .panel-heading {
  border-color: #E2E4E6;
  background-color: #E2E4E6;
}

.avatar {
  border: 1px solid;
  border-color: silver;
}

.sortable-ghost {
  opacity: 0;
  background: inherit;
}

.board-navbar {
  background-color: #34495E;
  border: 0px;
  border-radius: 0px;
  min-height: 40px;
}

.navbar-default {
  background: #34495E;
  border-color: inherit;
}

.add-issue {
  margin-right: 0px;
  margin-top: 3px;
}

.add-issue-button {
  border: 0px;
  padding: 0px;
  color: white;
  font-size: inherit;
  background: inherit;
}

.heading-column {
  text-align: center;
  font-weight: 700;
  width: 20%;
  float: left;
  height: 100%;
  padding-left: 3px;
  padding-right: 3px;
  text-transform: capitalize;
}

.milestone-heading {
  text-align: left;
  font-weight: 700;
  background-color: inherit;
  height: 30px;
  text-transform: capitalize;
}

.milestone-heading-text {
  padding: 5px;
}

.heading-container {
  padding-top: 10px;
}

